# wrenfold-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  functions.cmake  imu_integration.cc  imu_integration.py  matrix_mul.cc  quat_interpolation.cc  quat_interpolation.py
.github/workflows/: ci.yml
benchmarks/: camera_params_t.h  ceres_utils.h  imu_integration.cc  imu_integration_ceres.h  imu_integration_handwritten.h  matrix_mul.cc  quat_interpolation.cc  quat_interpolation_ceres.h  quat_interpolation_handwritten.h  rolling_shutter_camera.cc  rolling_shutter_camera_ceres.h
dependencies/: CMakeLists.txt
output/integrate_imu/: integrate_imu.h  integrate_imu_chain.h  integrate_imu_wf.h
output/integrate_imu/cpp/lcmtypes/sym/: res_t.hpp
output/integrate_imu/lcmtypes/: integrate_imu.lcm
output/integrate_imu/python/lcmtypes/sym/: _res_t.py
output/matrix_mul/: matrix_mul_wf.h
output/quat_interpolation/: quat_interpolate.h  quat_interpolate_chain.h  quat_interpolate_first_order.h  quat_interpolate_no_conditional_wf.h  quat_interpolate_wf.h  quat_interpolate_with_jacobians01.h
scripts/: create_plots.py  gen_all.py  gen_imu_integration_sf.py  gen_imu_integration_wf.py  gen_quat_interpolation_sf.py  gen_quat_interpolation_wf.py  gen_rolling_shutter_camera_sf.py  gen_rolling_shutter_camera_wf.py  imu_integration.py  imu_integration_expressions_sf.py  quat_expressions_sf.py  quat_interpolation.py  rolling_shutter_camera_expressions_sf.py  run_all_generators.py  symforce_utils.py  utils.py
